# spacetower-python-sdk

./: .env.example  .gitignore  CHANGELOG  LICENCE.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflow/: python.yml
.github/workflows/: python-publish.yml  python-tests.yml  python.yml
doc/: conf.py  index.rst
fds/: auth.py  client.py  config.py  constants.py
fds/models/: __init__.py  _model.py  _use_case.py  actions.py  ground_station.py  nmea_processor.py  orbital_state.py  orbits.py  quaternion.py  roadmaps.py  spacecraft.py  strategy.py  telemetry.py  two_line_element.py
fds/models/determination/: configuration.py  requests.py  result.py  use_case.py
fds/models/maneuvers/: result.py  strategy.py  use_case.py
fds/models/orbit_extrapolation/: ephemeris.py  events.py  requests.py  result.py  use_case.py
fds/models/station_keeping/: requests.py  result.py  strategy.py  tolerance.py  use_case.py
fds/models/tle_extrapolation/: result.py  (+1 more)
fds/utils/: dates.py  dict.py  enum.py  frames.py  geometry.py  log.py  math.py  nmea.py  orbital_mechanics.py
public/doctrees/: environment.pickle  faq.doctree  index.doctree
public/html/: .buildinfo  faq.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: __init__.py  test_determination.py  test_ground_station.py  test_maneuvers.py  test_nmea_processor.py  test_orbit_extrapolation.py  test_orbital_state.py  test_quaternion.py  test_spacecraft.py  test_station_keeping.py  test_telemetry.py  test_tle_extrapolation.py  test_two_line_element.py  test_utils.py
(+61 files in other folders)
