[tool.poetry]
name = "spacetower-fds-sdk"
version = "1.1.0"
description = "SDK for spacetower Flight Dynamics System API"
authors = ["Exotrail"]
readme = "README.md"
license = "MIT"
keywords = ["FDS", "API", "Exotrail", "Flight Dynamics"]
packages = [
    { include = "fds" }
]

[tool.poetry.dependencies]
python = "^3.11"
PyYAML = "^6.0.1"
numpy = "^1.26.4"
typing-extensions = "^4.11.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
spacetower-python-client = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
sphinx-autobuild = "^2024.4.16"
sphinx-autodoc-typehints = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"